refactor this repo for use with gnu stow instead of a broken script.

--- a/README
+++ b/README
@@ -1,2 +1,4 @@
-This repo is for storing my dotfiles, restoring and managind them accross various machines.
-The install script is shamelessly copied from http://blog.smalleycreative.com/tutorials/using-git-and-github-to-manage-your-dotfiles/
+This repo is for storing my dotfiles, restoring and managind them accross
+various machines.
+
+Those scripts are to be isntalled using gnu stow.
